--- a/app/views/products/home.html.erb
+++ b/app/views/products/home.html.erb
@@ -2,3 +2,13 @@
 <% @products.each do |product| %>
 <%= product.name %>
 <% end %>
+
+<p >
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/xDP6jvf8nkM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/R5SD0JtvBDo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+</p>
+
+<%= link_to "Recherche", albums_path %>
